@@ -6,7 +6,7 @@
    details.
 
    Function prototypes
-   $Id: mix3.h,v 1.23 2003/05/05 11:03:41 weaselp Exp $ */
+   $Id: mix3.h,v 1.24 2003/05/08 18:07:08 weaselp Exp $ */
 
 
 #ifndef _MIX3_H
@@ -348,6 +348,7 @@ int chain_randfinal(int type, REMAILER *remailer, int badchains[MAXREM][MAXREM],
 
 float chain_reliability(char *chain, int chaintype,
 			char *reliability_string);
+int redirect_message(BUFFER *sendmsg, char *chain, int numcopies, BUFFER *chainlist);
 int mix2_encrypt(int type, BUFFER *message, char *chainstr, int numcopies,
 		 BUFFER *feedback);
 int t1_encrypt(int type, BUFFER *message, char *chainstr, int latency,
